--- a/src/Queue/index.html
+++ b/src/Queue/index.html
@@ -1,7 +1,7 @@
 <!--
- * @Date: 2019-11-24 21:54:08
+ * @Date: 2019-11-30 21:24:29
  * @LastEditors: 
- * @LastEditTime: 2019-11-30 21:27:49
+ * @LastEditTime: 2019-12-01 16:59:40
  -->
 <!DOCTYPE html>
 <html lang="en">
@@ -9,12 +9,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>javascript数据结构与算法</title>
+    <title>队列</title>
 </head>
 <body>
-    <ul>
-        <li><a href="/Stack">栈</a></li>
-        <li><a href="/Queue">队列</a></li>
-    </ul>
+    <script src="/Queue.js"></script>
+    <script src="/LoopQueue.js"></script>
+    <script src="/main.js"></script>
+    <script src="/hotPotato.js"></script>
 </body>
 </html>
