--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Date: 2019-11-24 21:54:08
  * @LastEditors: 
- * @LastEditTime: 2019-11-30 21:27:49
+ * @LastEditTime: 2019-12-07 16:52:11
  -->
 <!DOCTYPE html>
 <html lang="en">
@@ -15,6 +15,7 @@
     <ul>
         <li><a href="/Stack">栈</a></li>
         <li><a href="/Queue">队列</a></li>
+        <li><a href="/LinkedList">链表</a></li>
     </ul>
 </body>
 </html>
