--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Date: 2019-11-24 21:54:08
  * @LastEditors: 
- * @LastEditTime: 2019-12-07 16:52:11
+ * @LastEditTime: 2019-12-14 20:40:48
  -->
 <!DOCTYPE html>
 <html lang="en">
@@ -16,6 +16,7 @@
         <li><a href="/Stack">栈</a></li>
         <li><a href="/Queue">队列</a></li>
         <li><a href="/LinkedList">链表</a></li>
+        <li><a href="/Recursion">递归</a></li>
     </ul>
 </body>
 </html>
