--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Date: 2019-11-24 21:54:08
- * @LastEditors: 
- * @LastEditTime: 2019-12-14 20:40:48
+ * @LastEditors  : Please set LastEditors
+ * @LastEditTime : 2019-12-30 20:51:08
  -->
 <!DOCTYPE html>
 <html lang="en">
@@ -17,6 +17,7 @@
         <li><a href="/Queue">队列</a></li>
         <li><a href="/LinkedList">链表</a></li>
         <li><a href="/Recursion">递归</a></li>
+        <li><a href="/BST">二分搜索树</a></li>
     </ul>
 </body>
 </html>
