--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Date: 2019-11-24 21:54:08
  * @LastEditors  : Please set LastEditors
- * @LastEditTime : 2019-12-30 20:51:08
+ * @LastEditTime : 2020-01-05 11:45:36
  -->
 <!DOCTYPE html>
 <html lang="en">
@@ -18,6 +18,7 @@
         <li><a href="/LinkedList">链表</a></li>
         <li><a href="/Recursion">递归</a></li>
         <li><a href="/BST">二分搜索树</a></li>
+        <li><a href="/Set-and-Map">集合和映射</a></li>
     </ul>
 </body>
 </html>
